--- a/rails/bin/rvm/install
+++ b/rails/bin/rvm/install
@@ -1,8 +1,7 @@
 #!/bin/sh
 
-typeset _version _result url_files rvm_files _files
+typeset _result url_files rvm_files _files
 
-_version=${1:-latest}
 _result=0
 
 files source "/etc/rvmrc" "$HOME/.rvmrc"
@@ -18,10 +17,10 @@ source "${_files[@]}"  || true
 
 if ! command is function rvm
 then
-  url="https://rvm.beginrescueend.com/install/rvm"
+  url="https://raw.github.com/wayneeseguin/rvm/master/binscripts/rvm-installer"
   curl -L -sk "$url" -o rvm-installer
   chmod +x "rvm-installer"
-  ./rvm-installer --version ${_version}
+  ./rvm-installer # -s stable
   files remove "rvm-installer"
 fi
 
