--- a/rails/bin/rvm/install
+++ b/rails/bin/rvm/install
@@ -17,10 +17,8 @@ source "${_files[@]}"  || true
 
 if ! command is function rvm
 then
-  url="https://raw.github.com/wayneeseguin/rvm/master/binscripts/rvm-installer"
-  curl -L -sk "$url" -o rvm-installer
-  chmod +x "rvm-installer"
-  ./rvm-installer # -s stable
-  files remove "rvm-installer"
+  bash < <(
+    curl -s https://raw.github.com/wayneeseguin/rvm/master/binscripts/rvm-installer
+  )
 fi
 
